--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,20 @@
-html, body {
+html {
+	background: url(../images/c-10-0-80-a-JW.jpg) center center no-repeat fixed;
+	background-size: cover;
+}
+
+body {
 	padding: 0;
 	margin: 0 auto;
 	box-sizing: border-box;
 	width: 960px;
 	height: 615px;
 	line-height: 1.2;
-	background-image: url(../images/c-10-0-80-a-JW.jpg);
-	background-size: cover;
-
 }
 
 .container {
 	width: 960px;
-	height: 100%;	
+	height: 100%;
 	margin-top: 25px;
 }
 
@@ -122,12 +124,12 @@ padding-top: 50px;
 	width: 100%;
 	height: 15%;
 	border-radius: 15px;
-	padding: 5px 0 5px 0; 
+	padding: 5px 0 5px 0;
 	margin-bottom: 5px;
 	background-color: white;
 	opacity: 0.75;
 	box-shadow: 1px 1px 3px #9BEAFF;
-	
+
 }
 .usedTitle {
 	font-size: 1.2em;
@@ -185,7 +187,7 @@ h1 {
 	font-size: 2.5em;
 	font-weight: bolder;
 	padding: 20px;
-} 
+}
 
 
 h1, h2, h3, h4, h5 {
@@ -207,8 +209,20 @@ button {
     opacity: 0.85;
 }
 
-video {
-	border-radius: 15px;
-	opacity: .97;
+#stage {
+
+	opacity: .92;
 }
+
+#clip {
+	display: none;
+
+	opacity: .92;
+}
+
+img, video {
+	border-radius: 15px;
+}
+
+
 
